--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -1,3 +1,22 @@
+<div class="c-header-admin">
+  <div class="wrapper">
+    <div>
+      <% unless @breadcrumbs.blank? %>
+        <ul class="breadcrumbs">
+          <% @breadcrumbs.each do |item| %>
+            <li><%= item %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+    <ul class="menu">
+      <li><%= link_to 'Content Management ', management_path, class: '-highlight' %></li>
+      <li><%= link_to 'Logout', auth_logout_path, {class: 'nav-link', :method => :delete} %></li>
+    </ul>
+  </div>
+</div>
+
+<!--
 <nav class="navbar navbar-dark bg-primary">
   <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
     &#9776;
@@ -10,12 +29,7 @@
         <ul class="nav navbar-nav">
           <li class="nav-item"><%= link_to 'Content Management ', management_path, {class: 'nav-link'} %></li>
           <li class="nav-item"><%= link_to 'Users', admin_users_path, {class: current_class('admin/users') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Templates', admin_site_templates_path, {class: current_class('admin/site_templates') + 'nav-link'} %></li>
           <li class="nav-item"><%= link_to 'Sites', admin_sites_path, {class: current_class('admin/sites') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Routes', admin_routes_path, {class: current_class('admin/routes') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Page templates', admin_page_templates_path, {class: current_class('admin/page_templates') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Datasets', admin_datasets_path, {class: current_class('admin/datasets') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Contexts', admin_contexts_path, {class: current_class('admin/contexts') + 'nav-link'} %></li>
         </ul>
         <ul class="nav navbar-nav pull-xs-right">
           <li class="nav-item"><%= link_to 'Logout', auth_logout_path, {class: 'nav-link', :method => :delete} %></li>
@@ -23,3 +37,4 @@
     <% end %>
   </div>
 </nav>
+-->
