Adds the extended header for the main pages

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,14 @@
-<div class="js-tabs"></div>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Users</h1>
+      </div>
+    </div>
+  </div>
+<% end %>
 
-<h1>Users</h1>
+<div class="js-tabs"></div>
 
 <table class="table table-bordered">
   <thead>
