--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,6 +1,17 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Dashboard</h1>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <div class="js-tabs"></div>
 
-<h1>Admin</h1>
-
-<table class="table table-bordered">
-</table>
+<div class="l-dashboard">
+  <div class="wrapper">
+    <h2>Please select a tab above</h2>
+  </div>
+</div>
