--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -1,37 +1,32 @@
 <% content_for :extended_header do %>
   <div class="c-extended-header">
     <div class="wrapper">
-      <div class="description">
-        <h1>Sites</h1>
-      </div>
+      <h1>Sites</h1>
+      <ul class="action-buttons">
+        <li><%= link_to 'New site', new_admin_site_path, class: 'c-button' %></li>
+      </ul>
     </div>
   </div>
 <% end %>
 
 <div class="js-tabs"></div>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Template</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @sites.each do |site| %>
-      <tr>
-        <td><%= site.name %></td>
-        <td><%= site.site_template.name %></td>
-        <td><%= link_to 'Show', admin_site_path(site) %></td>
-        <td><%= link_to 'Edit', edit_admin_site_path(site) %></td>
-        <td><%= link_to 'Destroy', admin_site_path(site), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<div class="l-site-list">
+  <div class="wrapper">
+    <table class="c-table">
+      <tr class="header">
+        <th>Name</th>
+        <th>Template</th>
+        <th colspan="2"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Site', new_admin_site_path, class: 'btn btn-primary' %>
+      <% @sites.each do |site| %>
+        <tr>
+          <td><%= site.name %></td>
+          <td><%= site.site_template.name %></td>
+          <td><%= link_to 'Edit', edit_admin_site_path(site), class: 'c-table-action-button -edit', title: 'Edit' %></td>
+          <td><%= link_to 'Delete', admin_site_path(site), method: :delete, data: { confirm: 'Are you sure?' }, class: 'c-table-action-button -delete', title: 'Delete' %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
