Fixes an issue with the tree layout
An additional, unecessary "add page" button would be located at the end of the tree.

--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -20,9 +20,11 @@
         {{/if}}
       </li>
     {{/each}}
-    <li class="js-not-nestable">
-      <button type="button" class="add-page-button">Add page</button>
-    </li>
+    {{#unless firstCall}}
+      <li class="js-not-nestable">
+        <button type="button" class="add-page-button">Add page</button>
+      </li>
+    {{/unless}}
   </ul>
 {{/inline}}
 
