Adds a reset button to restore the tree

--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -22,7 +22,7 @@
 
 <div class="c-action-bar">
   <div class="wrapper">
-    <div></div>
+    <button class="c-button -outline -dark-text js-reset">Undo all changes</button>
     <%= link_to 'Save', management_site_update_structure_path(@site.slug), class: 'c-button js-submit' %>
   </div>
 </div>
