--- a/app/assets/stylesheets/components/management/c-button.scss
+++ b/app/assets/stylesheets/components/management/c-button.scss
@@ -8,6 +8,7 @@
   font-size: $font-size-normal; // Mandatory for button.c-button
   font-weight: $font-weight-bold;
   text-transform: uppercase;
+  cursor: pointer;
 
   &.-outline {
     background: transparent;
