--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -45,6 +45,8 @@ $color-7:  #dededd;
 $color-8:  #ff706c;
 $color-9:  #404040;
 $color-10: darken(saturate($color-1, 10%), 5%);
+$color-11: #fff00e;
+$color-12: #dd3e21;
 
 // General layout
 $body-max-width:         1280px;
