--- a/app/assets/stylesheets/components/management/c-button.scss
+++ b/app/assets/stylesheets/components/management/c-button.scss
@@ -4,6 +4,7 @@
   border-radius: 20px;
   background: $color-10;
   color: $color-3;
+  font-family: $font-family-1; // Mandatory for button.c-button
   font-size: $font-size-normal; // Mandatory for button.c-button
   font-weight: $font-weight-bold;
   text-transform: uppercase;
