Fixes an issue where the server would return 500
Some shared components would use up to 12 colors whereas in the front only 9 would be defined.

--- a/app/assets/stylesheets/front/_settings-theme-fa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-fa.scss
@@ -44,6 +44,9 @@ $color-6:  #333;
 $color-7:  #3b3b3b;
 $color-8:  #f5f4f4;
 $color-9:  #eceaea;
+$color-10: transparent; // Fake color, to be replaced
+$color-11: transparent; // Fake color, to be replaced
+$color-12: transparent; // Fake color, to be replaced
 
 // General layout
 $body-max-width:         1280px;
