Fixes an issue with shared instance properties
Because the defaults properties would be saved in the prototype of the Backbone views, if we would create two instances of a same views, overriding the defaults in one would override the ones of the other. By using Object.assign, we copy the prototype's properties instead of mutating them.

--- a/app/assets/javascripts/views/management/wysiwygView.js.erb
+++ b/app/assets/javascripts/views/management/wysiwygView.js.erb
@@ -17,7 +17,7 @@
     },
 
     initialize: function (settings) {
-      this.options = _.extend(this.defaults, settings);
+      this.options = Object.assign({}, this.defaults, settings);
 
       this.JSONContainer = document.querySelector('.js-content-json');
       this.HTMLContainer = document.querySelector('.js-content');
