--- a/app/views/admin/site_steps/name.html.erb
+++ b/app/views/admin/site_steps/name.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'header'%>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
 <%= include_gon %>
 
@@ -19,3 +20,4 @@
 
     <%= render partial: 'footer', locals: { f: f} %>
 <% end %>
+<%= console if Rails.env.development? %>
