--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'header'%>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
 <%= include_gon %>
 
@@ -41,3 +42,5 @@
     <% end %>
     <%= render partial: 'footer', locals: { f: f} %>
 <% end %>
+
+<%= console if Rails.env.develop? %>
