--- a/app/views/management/site_pages/forms/_map.html.erb
+++ b/app/views/management/site_pages/forms/_map.html.erb
@@ -12,7 +12,7 @@
 
 <div class="l-page-creation -map">
   <div class="wrapper">
-    <%= form_for(form_for_path) do |f| %>
+    <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
       <% if site_page.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
