--- a/app/views/management/site_pages/show.html.erb
+++ b/app/views/management/site_pages/show.html.erb
@@ -5,7 +5,11 @@
         <% if @site_page.content_type == ContentType::LINK %>
           <h1>Link saved!</h1>
         <% else %>
-          <h1>Page saved!</h1>
+          <% if @site_page.content_type == ContentType::MAP %>
+            <h1>Map settings saved!</h1>
+          <% else %>
+            <h1>Page saved!</h1>
+          <% end %>
         <% end %>
         <p>What do you want to do now?</p>
       </div>
@@ -16,7 +20,7 @@
 
 <div class="l-page-creation -created">
   <div class="wrapper">
-    <%= link_to (@site_page.content_type == ContentType::LINK ? 'Edit the link' : 'Edit the page'), {controller: 'management/site_pages', action: 'edit', site_slug: @site_page.site.slug}, class: 'c-button' %>
+    <%= link_to (@site_page.content_type == ContentType::LINK ? 'Edit the link' : (@site_page.content_type == ContentType::MAP ? 'Edit the settings' : 'Edit the page')), {controller: 'management/site_pages', action: 'edit', site_slug: @site_page.site.slug}, class: 'c-button' %>
     <%= link_to 'See the list of pages', {controller: 'management/site_pages', action: 'index', site_slug: @site_page.site.slug}, class: 'c-button -outline -dark-text' %>
     <%= link_to (@site_page.content_type == ContentType::LINK ? 'Create a new link' : 'Create a new page'), {controller: 'management/site_pages', action: 'new', site_slug: @site_page.site.slug}, class: 'c-button -outline -dark-text' %>
   </div>
