--- a/app/views/management/site_pages/forms/_map.html.erb
+++ b/app/views/management/site_pages/forms/_map.html.erb
@@ -1,39 +1,42 @@
 <% content_for :extended_header do %>
-  <div class="c-extended-header -high">
-    <div class="wrapper">
-      <div class="description">
-        <h1>Map</h1>
-        <p>Update this JSON to update the map's look and features.</p>
+    <div class="c-extended-header -high">
+      <div class="wrapper">
+        <div class="description">
+          <h1>Map</h1>
+          <p>Update this JSON to update the map's look and features.</p>
+        </div>
+        <div></div>
       </div>
-      <div></div>
     </div>
-  </div>
 <% end %>
 
 <div class="l-page-creation -map">
   <div class="wrapper">
-    <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
-      <% if site_page.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+    <%= form_for(form_for_path, :html => {:class => 'js-form'}) do |f| %>
+        <% if site_page.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
 
-            <ul>
-              <% site_page.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-      <% end %>
+              <ul>
+                <% site_page.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
 
-      <div class="c-fieldset">
-        <%= f.text_area :content %>
-        <%= f.label 'Map settings', class: 'col-sm-2 form-control-label' %>
-      </div>
+        <div class="c-fieldset">
+          <%= f.fields_for :content, OpenStruct.new(site_page.content) do |ff| %>
+              <%= ff.text_area :settings, class: 'settings' %>
+              <%= ff.label 'Map settings', class: 'col-sm-2 form-control-label' %>
+          <% end %>
+        </div>
+
     <% end %>
   </div>
 </div>
 
 <% content_for :action_bar do %>
-  <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
-  <button type="submit" class="c-button js-submit">Update</button>
+    <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
+    <button type="submit" class="c-button js-submit">Update</button>
 <% end %>
