Finished site creation/editing

--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -43,4 +43,4 @@
     <%= render partial: 'footer', locals: { f: f} %>
 <% end %>
 
-<%= console if Rails.env.develop? %>
+<%= console if Rails.env.development? %>
