--- a/app/assets/stylesheets/components/management/c-site-switcher.scss
+++ b/app/assets/stylesheets/components/management/c-site-switcher.scss
@@ -1,4 +1,5 @@
 .c-site-switcher {
+  max-width: 150px;
   padding-left: 20px;
   border: 0;
   background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTEiIGhlaWdodD0iNyIgdmlld0JveD0iMCAwIDExIDciIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHRpdGxlPmZsZWNoaXRhPC90aXRsZT48cGF0aCBkPSJNOS40ODUgMS4yNDNMNS4yNDMgNS40ODUgMSAxLjI0MyIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2U9IiM5N0JFMzIiIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==') no-repeat center left;
@@ -8,4 +9,6 @@
   text-transform: uppercase;
   -webkit-appearance: none;
   -moz-appearance: none;
+  overflow: hidden;
+  text-overflow: ellipsis; // Not working on Chrome: https://bugs.chromium.org/p/chromium/issues/detail?id=436654
 }
