--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -6,13 +6,17 @@
         <div class="page {{#unless enabled}} -disabled {{/unless}} js-handle">
           <span>{{name}}</span>
           <ul class="action-buttons">
-            {{#if enabled}}
-                <li><a href="" class="view-button js-disable">Disable</a></li>
-            {{else}}
-                <li><a href="" class="view-button-slashed js-enable">Enable</a></li>
-            {{/if}}
-            <li><a href="" class="edit-button">Edit</a></li>
-            <li><a href="" class="delete-button">Delete</a></li>
+            {{#if disableable}}
+                {{#if enabled}}
+                    <li><a href="" class="view-button js-disable">Disable</a></li>
+                {{else}}
+                    <li><a href="" class="view-button-slashed js-enable">Enable</a></li>
+                {{/if}}
+              {{/if}}
+            <li><a href="{{editUrl}}" class="edit-button">Edit</a></li>
+              {{#if disableable}}
+                <li><a href="{{deleteUrl}}" class="delete-button">Delete</a></li>
+              {{/if}}
           </ul>
         </div>
         {{#if children}}
