Feature/page structure saving (#66)
* Made the visibility button reflect the current status of each page

* Updates the template to work with the data

* Pages are translucent when disabled

* Added more info needed for each page of the structure

* Small fix

* Added creation of the tree that has to be saved

* Page structure is updated on change

* Feature for enabling/disabling pages on the structure

* Replacing database config yml

* Improves the enable feature

* First attempt at saving tree structure

* Saving of structure

* Updates the template to work with the data

* Made the visibility button reflect the current status of each page

* Pages are translucent when disabled

* Added more info needed for each page of the structure

* Small fix

* Added creation of the tree that has to be saved

* Page structure is updated on change

* Feature for enabling/disabling pages on the structure

* Replacing database config yml

* Improves the enable feature

* First attempt at saving tree structure

* Saving of structure

* Makes some design adjustements

* Moves the save button to the action bar component
* Fixes an issue with the slashed eye icon
* Fixes the opacity of the pages when disabled

* Fixes an issue with the tree layout

An additional, unecessary "add page" button would be located at the end of the tree.

* Adds a reset button to restore the tree

* Displays warnings to the user

* Displays a warning when updating the tree to remember them to save before leaving the page
* Displays a warning when re-enabling a page that has disabled ancestors to remember them it won't be visible until all of the ancestors aren't re-enabled

* Changes the page enabling behaviour

When the user disables a node with children, all the children are also disabled (as before), but the contrary is not true anymore: when the user re-enables a node with children, they stay disabled.

* Fixes an issue where the u

--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -1,13 +1,22 @@
 {{#*inline "item"}}
   <ul {{#if firstCall}}class="js-tree-root"{{/if}}>
     {{#each pages}}
-      <li class="js-draggable" id="page-{{id}}" data-name="{{name}}">
-        <div class="page js-handle">
+      <li class="js-draggable" id="page-{{id}}" data-name="{{name}}" data-parent="{{parent_id}}"
+          data-position="{{position}}" data-enabled="{{enabled}}" data-type="{{type}}">
+        <div class="page {{#unless enabled}} -disabled {{/unless}} js-handle">
           <span>{{name}}</span>
           <ul class="action-buttons">
-            <li><a href="" class="view-button">View</a></li>
-            <li><a href="" class="edit-button">Edit</a></li>
-            <li><a href="" class="delete-button">Delete</a></li>
+            {{#if disableable}}
+              {{#if enabled}}
+                  <li><button class="view-button js-disable">Disable</a></button>
+              {{else}}
+                  <li><button class="view-button-slashed js-enable">Enable</a></button>
+              {{/if}}
+            {{/if}}
+            <li><a href="{{editUrl}}" class="edit-button">Edit</a></li>
+            {{#if disableable}}
+              <li><a rel="nofollow" data-method="delete" data-confirm="Are you sure you want to delete this page?" href="{{deleteUrl}}" class="delete-button">Delete</a></li>
+            {{/if}}
           </ul>
         </div>
         {{#if children}}
@@ -15,23 +24,14 @@
         {{/if}}
       </li>
     {{/each}}
-    <li class="js-not-nestable">
-      <button type="button" class="add-page-button">Add page</button>
-    </li>
+    {{#unless firstCall}}
+      <li class="js-not-nestable">
+        <button type="button" class="add-page-button">Add page</button>
+      </li>
+    {{/unless}}
   </ul>
 {{/inline}}
 
 <div class="c-tree-structure">
-  <ul>
-    <li>
-      <div class="page -site-title">
-        <span>Site's Title</span>
-        <ul class="action-buttons">
-          <li><a href="" class="view-button">View</a></li>
-          <li><a href="" class="edit-button">Edit</a></li>
-        </ul>
-      </div>
-      {{> item pages=pages firstCall=true}}
-    </li>
-  </ul>
+  {{> item pages=pages firstCall=true}}
 </div>
