--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -1,7 +1,6 @@
 .c-tree-structure {
   display: flex;
   justify-content: center;
-  padding-top: 50px;
 
   ul {
     display: block;
@@ -44,10 +43,12 @@
     }
   }
 
+  // We target the vertical line going out of the root
   > ul {
-    // We want the root of the tree to act like a block element but have
-    // a width corresponding to its content
-    display: table;
+    &::after {
+      top: 39px;
+      height: calc(100% - 21px - 39px);  // 21 is half of the height of .add-page-button, 39px is the height of a page
+    }
   }
 
   .page {
@@ -75,6 +76,23 @@
       content: '';
     }
 
+    &.-disabled {
+      opacity: .5;
+
+      // The vertical lines must also be faded out
+      + ul {
+        &::after {
+          opacity: .5;
+        }
+
+        .add-page-button {
+          &::after {
+            opacity: .5;
+          }
+        }
+      }
+    }
+
     &.-placeholder {
       max-width: 200px;
       height: 43px; // Height of the other pages
@@ -82,15 +100,6 @@
 
       &.-invalid {
         border-color: $color-8;
-      }
-    }
-
-    &.-site-title {
-      text-transform: uppercase;
-      cursor: initial;
-
-      &::after {
-        content: none;
       }
     }
 
@@ -117,8 +126,20 @@
           display: block;
           width: 16px;
           height: 11px;
+          border: 0;
           background: image-url('icons/eye-icon.svg') no-repeat center center;
           text-indent: -10000px; // For accessibility, the text should stay visible
+          cursor: pointer;
+        }
+
+        > .view-button-slashed {
+          display: block;
+          width: 16px;
+          height: 16px;
+          border: 0;
+          background: image-url('icons/slashed-eye-icon.svg') no-repeat center center;
+          text-indent: -10000px; // For accessibility, the text should stay visible
+          cursor: pointer;
         }
 
         > .edit-button {
@@ -136,6 +157,20 @@
           background: image-url('icons/bin-icon.svg') no-repeat center center;
           text-indent: -10000px; // For accessibility, the text should stay visible
         }
+      }
+    }
+  }
+
+  > ul {
+    // We want the root of the tree to act like a block element but have
+    // a width corresponding to its content
+    display: table;
+
+    > li > .page {
+      cursor: default;
+
+      &::after {
+        content: none;
       }
     }
   }
@@ -167,8 +202,8 @@
       display: block;
       position: absolute;
       top: 50%;
-      left: -40px;
-      width: 40px;
+      left: -43px;
+      width: 42px;
       height: 1px;
       transform: translateY(-50%);
       background-color: $color-7;
