--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -10,11 +10,19 @@
   </div>
 <% end %>
 
+<%= include_gon %>
+
 <div class="js-tabs"></div>
-<div class="wrapper">
-  <div class="js-tree"></div>
 
-  <%= include_gon %>
+<div class="l-tree-structure">
+  <div class="wrapper">
+    <div class="js-tree"></div>
+  </div>
+</div>
 
-  <%= link_to 'Save', management_site_site_pages_path, class: 'btn btn-primary' %>
+<div class="c-action-bar">
+  <div class="wrapper">
+    <button class="c-button -outline -dark-text js-reset">Undo all changes</button>
+    <%= link_to 'Save', management_site_update_structure_path(@site.slug), class: 'c-button js-submit' %>
+  </div>
 </div>
