--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     </div>
     <div>
-      <%= link_to 'Logout', destroy_user_session_path, {:method => :delete} %>
+      <%= link_to 'Logout', auth_logout_url, {:method => :post} %>
     </div>
   </div>
 </div>
@@ -32,10 +32,10 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav pull-xs-right">
-          <% if current_user.admin? %>
+          <% if user_can?('access_management') %>
               <li class="nav-item"><%= link_to 'Admin interface', admin_path, {class: 'nav-link'} %></li>
           <% end %>
-          <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, {class: 'nav-link', :method => :delete} %></li>
+          <li class="nav-item"><%= link_to 'Logout', auth_logout_url, {class: 'nav-link', :method => :post} %></li>
         </ul>
     <% end %>
   </div>
