Feature/admin design (#75)
* Adds the header

* Adds the tab component

* Adds the extended header for the main pages

* Adds the basic design of the site list page

* Adds the style for the user list page

* Adds the table component

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,4 +1,17 @@
-<h1>Admin</h1>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Dashboard</h1>
+      </div>
+    </div>
+  </div>
+<% end %>
 
-<table class="table table-bordered">
-</table>
+<div class="js-tabs"></div>
+
+<div class="l-dashboard">
+  <div class="wrapper">
+    <h2>Please select a tab above</h2>
+  </div>
+</div>
