--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -1,27 +1,29 @@
-<h1>Sites</h1>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <h1>Sites</h1>
+      <ul class="action-buttons">
+        <li><%= link_to 'New site', new_admin_site_path, class: 'c-button' %></li>
+      </ul>
+    </div>
+  </div>
+<% end %>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Template</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= include_gon %>
 
-  <tbody>
-    <% @sites.each do |site| %>
-      <tr>
-        <td><%= site.name %></td>
-        <td><%= site.site_template.name %></td>
-        <td><%= link_to 'Show', admin_site_path(site) %></td>
-        <td><%= link_to 'Edit', edit_admin_site_path(site) %></td>
-        <td><%= link_to 'Destroy', admin_site_path(site), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="js-tabs"></div>
 
-<br>
+<div class="l-site-list">
+  <div class="wrapper">
 
-<%= link_to 'New Site', new_admin_site_path, class: 'btn btn-primary' %>
+    <div class="c-action-toolbar">
+      <ul class="buttons">
+      </ul>
+      <ul class="filters">
+        <li><div class="c-input-search js-table-search"></div></li>
+      </ul>
+    </div>
+
+    <div class="js-table"></div>
+  </div>
+</div>
