Changed the new site url

--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <h1>Sites</h1>
       <ul class="action-buttons">
-        <li><%= link_to 'New site', new_admin_site_path, class: 'c-button' %></li>
+        <li><%= link_to 'New site', new_admin_site_step_path, class: 'c-button' %></li>
       </ul>
     </div>
   </div>
