--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -11,7 +11,7 @@
     </div>
     <ul class="menu">
       <li><%= link_to 'Content Management ', management_path, class: '-highlight' %></li>
-      <li><%= link_to 'Logout', auth_logout_path, {class: 'nav-link', :method => :delete} %></li>
+      <li><%= link_to 'Logout', auth_logout_path, {class: 'nav-link', :method => :post} %></li>
     </ul>
   </div>
 </div>
