--- a/app/views/admin/site_steps/finish.html.erb
+++ b/app/views/admin/site_steps/finish.html.erb
@@ -2,5 +2,5 @@
 <h2>What do you want to do now?</h2>
 
 <%= link_to  'GO TO SITE', @site.routes.first.host, target: '_blank' %>
-<%= link_to 'CREATE A NEW SITE', admin_site_steps_path %>
+<%= link_to 'CREATE A NEW SITE', new_admin_site_step_path %>
 <%= link_to 'SEE MY SITES', admin_sites_path %>
