--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="form-group row">
   <div class="col-sm-offset-2 col-sm-10">
-    <%= f.submit 'CONTINUE', method: :put, class: 'btn btn-primary' %>
+    <%= f.button 'CONTINUE', value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'btn btn-primary' %>
     <% if @site.id %>
-      <%= f.submit 'SAVE CHANGES', method: :put, class: 'btn btn-primary' %>
+      <%= f.button 'SAVE CHANGES', value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'btn btn-primary' %>
     <% end %>
     <%= link_to 'CANCEL', admin_sites_path, class: 'btn btn-secondary' %>
   </div>
