Improves the accessibility of the steps bar
The disabled items can't be tabbed in anymore.

--- a/app/views/admin/site_steps/_header.html.erb
+++ b/app/views/admin/site_steps/_header.html.erb
@@ -3,7 +3,7 @@
     <ul class="steps">
       <% @site.form_steps.each do |site_step| %>
         <li>
-          <%= link_to site_step.capitalize, wizard_path(site_step), class: (disable_button?(site_step) ? '-disabled' : (active_button?(site_step) ? '-active' : '')) %>
+          <%= link_to site_step.capitalize, wizard_path(site_step), 'tabindex': disable_button?(site_step) ? '-1' : '0', class: (disable_button?(site_step) ? '-disabled' : (active_button?(site_step) ? '-active' : '')) %>
         </li>
       <% end %>
     </ul>
