--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -50,4 +50,56 @@
     }
   }
 
+  &.-style {
+
+    .templates {
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
+
+      .template {
+        position: relative;
+        margin: 10px;
+
+        input {
+          position: absolute;
+          left: -1000px;
+
+          &:not(:checked) + .content {
+            opacity: .3;
+          }
+        }
+
+        label {
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          text-indent: -10000px; // We want to keep the text for accessibility
+          cursor: pointer;
+          z-index: 1; // Required to be positioned on top
+        }
+
+        img {
+          border: 1px solid $color-7;
+          border-radius: 7px;
+        }
+
+        p {
+          margin: 7px 0 0;
+          font-weight: $font-weight-bold;
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    hr {
+      margin: 40px 0 30px;
+      border: 0;
+      border-bottom: 1px solid $color-7;
+    }
+  }
+
 }
