--- a/app/assets/javascripts/templates/admin/flag-colors.hbs
+++ b/app/assets/javascripts/templates/admin/flag-colors.hbs
@@ -1,14 +1,27 @@
 <input type="hidden" id="{{inputId}}" name="{{inputName}}" value="{{colorsValue}}">
-<ul class="c-flag-colors">
-    {{#each colors}}
-        <li>
-            <input type="color" value="{{color}}" data-id="{{@index}}">
-            <button type="button" class="js-remove-color" data-id="{{@index}}">Remove Color</button>
-        </li>
-    {{/each}}
-    {{#if addable}}
-        <li>
-            <button type="button" class="js-add-color">Add</button>
-        </li>
+<div class="c-flag-colors">
+  {{#each colors}}
+    <div class="c-centered-input">
+      <label for="color-{{index}}">Flag color {{index}}</label>
+      <div>
+        <button type="button" class="remove-color js-remove-color" data-id="{{@index}}">Remove Color</button>
+        <input type="color" value="{{color}}" id="color-{{index}}" data-id="{{@index}}">
+      </div>
+    </div>
+  {{/each}}
+  {{#if addable}}
+    <div class="c-centered-input">
+      <label for="color-{{#if colors.length}}{{lastColorIndex}}{{else}}0{{/if}}">Flag color {{#if colors.length}}{{lastColorIndex}}{{else}}1{{/if}}</label>
+      <div>
+        <button type="button" class="remove-color js-remove-color" data-id="{{colors.length}}">Remove Color</button>
+        <input type="color" value="{{color}}" id="color-{{#if colors.length}}{{lastColorIndex}}{{else}}0{{/if}}" data-id="{{#if colors.length}}{{colors.length}}{{else}}0{{/if}}">
+      </div>
+    </div>
+    {{#if addButtonVisible}}
+      <div class="c-centered-input">
+        <label>Add color</label>
+        <button type="button" class="add-color js-add-color">Add</button>
+      </div>
     {{/if}}
-</ul>
+  {{/if}}
+</div>
