--- a/app/assets/stylesheets/components/admin/c-centered-input.scss
+++ b/app/assets/stylesheets/components/admin/c-centered-input.scss
@@ -6,29 +6,56 @@
 
   label {
     display: inline-block;
+    position: relative;
     margin-right: 55px;
     font-weight: $font-weight-bold;
     text-transform: uppercase;
+
+    &.-file {
+      height: 44px;
+      line-height: 44px;
+
+      &::after {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: calc(100% + 71px);
+        width: 250px;
+        height: 44px;
+        padding: 0 15px;
+        border: 1px solid $color-7;
+        border-radius: 4px;
+        font-size: $font-size-x-normal;
+        font-weight: $font-weight-light;
+        line-height: 44px;
+        text-transform: none;
+        content: 'Select a file';
+        cursor: pointer;
+      }
+    }
   }
 
   input {
+    width: 250px;
     height: 44px;
     padding: 0 15px;
     border: 1px solid $color-7;
     border-radius: 4px;
     background: transparent;
+    font-size: $font-size-x-normal;
+    font-weight: $font-weight-light;
     line-height: 44px;
 
     &[type="color"] {
-      min-width: 100px;
+      max-width: 100px;
 
       &::-webkit-color-swatch-wrapper {
         padding: 10px 0;
       }
+    }
 
-      &::-webkit-color-swatch {
-        padding: 1px;
-      }
+    &[type="file"] {
+      display: none;
     }
   }
 }
