Made tree structure add buttons work

--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -8,9 +8,9 @@
           <ul class="action-buttons">
             {{#if disableable}}
               {{#if enabled}}
-                  <li><button class="view-button js-disable">Disable</a></button>
+                  <li><button class="view-button js-disable">Disable</button></li>
               {{else}}
-                  <li><button class="view-button-slashed js-enable">Enable</a></button>
+                  <li><button class="view-button-slashed js-enable">Enable</button></li>
               {{/if}}
             {{/if}}
             <li><a href="{{editUrl}}" class="edit-button">Edit</a></li>
