--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -15,3 +15,4 @@
     <%= link_to 'Save', management_site_update_structure_path(@site.slug), class: 'c-button js-submit' %>
   </div>
 </div>
+<%= console if Rails.env.development? %>
