--- a/app/views/admin/site_steps/name.html.erb
+++ b/app/views/admin/site_steps/name.html.erb
@@ -17,7 +17,9 @@
             <div class="js-urls"></div>
         <% end %>
 
-        <%= render partial: 'footer', locals: { f: f} %>
+        <%= render partial: 'form_footer', locals: { f: f} %>
     <% end %>
   </div>
 </div>
+
+<%= render partial: 'footer' %>
