--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -39,7 +39,9 @@
             <% end %>
         <% end %>
       <% end %>
-      <%= render partial: 'footer', locals: { f: f} %>
+      <%= render partial: 'form_footer', locals: { f: f} %>
     <% end %>
   </div>
 </div>
+
+<%= render partial: 'footer' %>
