--- a/app/views/admin/site_steps/users.html.erb
+++ b/app/views/admin/site_steps/users.html.erb
@@ -17,8 +17,10 @@
             </div>
           </div>
         <% end %>
-        <%= render partial: 'footer', locals: { f: f } %>
+        <%= render partial: 'form_footer', locals: { f: f } %>
       </div>
     <% end %>
   </div>
 </div>
+
+<%= render partial: 'footer' %>
