--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -33,10 +33,12 @@
           </div>
       <% end %>
 
-      <%= render partial: 'footer', locals: { f: f } %>
+      <%= render partial: 'form_footer', locals: { f: f } %>
   <% end %>
   </div>
 </div>
+
+<%= render partial: 'footer' %>
 
 
 
