--- a/app/views/management/page_steps/dataset.html.erb
+++ b/app/views/management/page_steps/dataset.html.erb
@@ -3,10 +3,11 @@
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
     <% @context_datasets.each do |context_id, datasets| %>
+        <%# TODO: Remove the DB query from the view %>
         <%= ::Context.find(context_id).name %>
         <% datasets.each do |dataset| %>
           <fieldset>
-            <%= radio_button_tag 'page[dataset_setting]', context_id.to_s + '_' + dataset.id, f.object.dataset_setting ? (f.object.dataset_setting.id == dataset.id) : nil %>
+            <%= radio_button_tag 'page[dataset_setting][context_id_dataset_id]', [context_id.to_s, dataset.id], f.object.dataset_setting ? (f.object.dataset_setting.id == dataset.id) : nil %>
             <%= dataset.name %>
           </fieldset>
         <% end %>
