--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -114,4 +114,24 @@
     }
   }
 
+  &.-finish {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+    padding-bottom: 0;
+
+    > .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      .c-button {
+        width: 200px;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
 }
